Add response layout for new training view

--- a/client/src/app/features/training-view-2/training-view-2.component.scss
+++ b/client/src/app/features/training-view-2/training-view-2.component.scss
@@ -25,3 +25,13 @@
   width: 100%;
   opacity: 1;
 }
+
+@media screen and (max-width: 768px) {
+  .training-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .column-name {
+    display: none;
+  }
+}
