--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -17,6 +17,9 @@
   --calendar-border-color: #e0e0e0;
   --calendar-hover-color: #f9f9f9;
 
+  --stripe-color-light: rgba(255, 255, 255, 0.1);
+  --stripe-color-dark: rgba(0, 0, 0, 0.05);
+
   --off-white: #fdfdfd;
 
   --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
