--- a/client/src/app/features/training-view-2/add-row-button/add-row-button.component.scss
+++ b/client/src/app/features/training-view-2/add-row-button/add-row-button.component.scss
@@ -7,3 +7,12 @@ button {
   font-size: 16px;
   height: 25px;
 }
+
+@media screen and (max-width: 768px) {
+  button {
+    background-color: rgb(239, 236, 236);
+    border: 1px solid lightblue;
+    color: var(--accent-color);
+    height: 35px;
+  }
+}
