--- a/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.scss
+++ b/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.scss
@@ -2,6 +2,10 @@
   display: contents;
 }
 
+.placeholder {
+  opacity: 0;
+}
+
 .exercise-field {
   padding: 7.5px;
   border-bottom: 1px solid var(--calendar-border-color);
