--- a/client/src/app/shared/components/pagination/pagination.component.scss
+++ b/client/src/app/shared/components/pagination/pagination.component.scss
@@ -16,7 +16,7 @@ a {
     padding: 0;
     color: #222;
     border-radius: 50%;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     border: 1px solid #ddd;
     transition:
       background-color 0.3s ease,
