Refactor training view and fix design issue on hover state

--- a/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.scss
+++ b/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.scss
@@ -49,6 +49,10 @@
       content: attr(data-label) '';
       text-align: left;
     }
+
+    &:hover {
+      background-color: unset;
+    }
   }
 
   :host:nth-child(even) {
