--- a/client/src/app/features/training-view-2/training-view-2.component.html
+++ b/client/src/app/features/training-view-2/training-view-2.component.html
@@ -24,7 +24,10 @@
     <div class="placeholder-for-add-button"></div>
   }
 
-  <app-navigation-arrows />
+  <app-navigation-arrows
+    (onNavigateLeft)="navigateToPreviousTrainingDay()"
+    (onNavigateRight)="navigateToNextTrainingDay()"
+  />
 } @else {
   <app-spinner />
 }
