Use new navigation arrows for training navigation

--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -124,7 +124,7 @@
   </form>
 
   <div class="navigation-container">
-    <app-training-view-navigation [trainingDayIndex]="trainingDayIndex()" />
+    <app-training-view-navigation [trainingWeekIndex]="trainingWeekIndex()" [trainingDayIndex]="trainingDayIndex()" />
   </div>
 } @else {
   <app-spinner />
