--- a/client/src/app/features/training-view-2/training-view-2.component.html
+++ b/client/src/app/features/training-view-2/training-view-2.component.html
@@ -24,10 +24,7 @@
     <div class="placeholder-for-add-button"></div>
   }
 
-  <app-navigation-arrows
-    (onNavigateLeft)="navigateToPreviousTrainingDay()"
-    (onNavigateRight)="navigateToNextTrainingDay()"
-  />
+  <app-navigation-arrows (onNavigateLeft)="navigateToPreviousDay()" (onNavigateRight)="navigateToNextDay()" />
 } @else {
   <app-spinner />
 }
