--- a/client/src/app/features/training-plans/training-view/training-view-navigation/training-view-navigation.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view-navigation/training-view-navigation.component.html
@@ -1,20 +1,14 @@
-    <app-pagination
-      [currentPage]="trainingDayIndex()"
-      [totalPages]="trainingDataService.trainingFrequency"
-      (pageChanged)="navigationService.navigateDay($event)"
-    />
+<app-pagination
+  [currentPage]="trainingDayIndex()"
+  [totalPages]="trainingDataService.trainingFrequency"
+  (pageChanged)="navigationService.navigateToDay(trainingWeekIndex(), $event)"
+/>
 
-    <div>
-      <app-icon
-        [appTooltip]="'Vorherige Woche'"
-        (click)="navigationService.navigateWeek(NavigationDirection.BACKWARD, trainingDayIndex())"
-        [name]="IconName.CHEVRON_LEFT"
-        [size]="28"
-      />
-      <app-icon
-        [appTooltip]="'Näcshte Woche'"
-        [name]="IconName.CHEVRON_RIGHT"
-        (click)="navigationService.navigateWeek(NavigationDirection.FORWARD, trainingDayIndex())"
-        [size]="28"
-      />
-    </div>
+<app-navigation-arrows
+  (navigateLeft)="
+    navigationService.navigateToWeek(NavigationDirection.BACKWARD, trainingWeekIndex(), trainingDayIndex())
+  "
+  (navigateRight)="
+    navigationService.navigateToWeek(NavigationDirection.FORWARD, trainingWeekIndex(), trainingDayIndex())
+  "
+/>
