--- a/client/src/app/features/training-plans/training-view/training-view-navigation/training-view-navigation.component.scss
+++ b/client/src/app/features/training-plans/training-view/training-view-navigation/training-view-navigation.component.scss
@@ -1,40 +1,18 @@
 :host {
-    display: flex;
-    justify-content: flex-end;
-    gap: 2rem;
-    color: rgb(109, 109, 109);
-    margin-top: 0.5rem;
-  
-    div {
-      display: flex;
-      gap: 1rem;
-    }
-  
-    app-icon {
-      position: relative;
-  
-      &:hover {
-        cursor: pointer;
-      }
-  
-      &:hover::after {
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 2.5rem;
-        height: 2.5rem;
-        border-radius: 50%;
-        background-color: rgba(0, 0, 0, 0.1);
-        z-index: -1;
-      }
-    }
-  }
+  display: flex;
+  justify-content: flex-end; /* Elemente an das Ende (rechte Ecke) schieben */
+  align-items: center; /* Vertikale Zentrierung */
+  gap: 1rem; /* Abstand zwischen Pagination und Navigationspfeilen */
+  color: rgb(109, 109, 109);
+  margin-top: 0.5rem;
+}
 
-  @media screen and (max-width: 768px) {
-    :host {
-        justify-content: center;
-        margin-bottom: 3rem;
-      }
+@media screen and (max-width: 768px) {
+  :host {
+    flex-direction: column; /* Auf kleinere Bildschirme umstellen */
+    justify-content: center;
+    align-items: center; /* Zentrieren der Elemente */
+    gap: 1rem;
+    margin-bottom: 3rem;
   }
+}
