Use parallel routes for migration and prevent inial pause timers

--- a/client/src/app/features/training-view-2/training-view-2.component.html
+++ b/client/src/app/features/training-view-2/training-view-2.component.html
@@ -24,7 +24,7 @@
     <div class="placeholder-for-add-button"></div>
   }
 
-  <app-navigation-arrows (onNavigateLeft)="navigateToPreviousDay()" (onNavigateRight)="navigateToNextDay()" />
+  <app-training-view-navigation [trainingWeekIndex]="trainingWeekIndex()" [trainingDayIndex]="trainingDayIndex()" />
 } @else {
   <app-spinner />
 }
