Revise datepicker design and add grunlarity constraints

--- a/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.html
@@ -26,3 +26,4 @@
 @if (!isSelectionValid()) {
   <p class="error-message">Trainingsplan muss mindestens 2 Trainingtage haben</p>
 }
+<app-date-picker [(value)]="startDate" />
