Fix first selectable start date

--- a/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-scheduling/training-scheduling.component.html
@@ -26,4 +26,7 @@
 @if (!isSelectionValid()) {
   <p class="error-message">Trainingsplan muss mindestens 2 Trainingtage haben</p>
 }
-<app-date-picker [(value)]="trainingPlanEditView.startDate" />
+<app-date-picker
+  [(value)]="trainingPlanEditView.startDate"
+  [firstSelectableDate]="trainingPlanEditView.firstSelectableStartDate()"
+/>
