--- a/client/src/app/features/training-view-2/add-row-button/add-row-button.component.scss
+++ b/client/src/app/features/training-view-2/add-row-button/add-row-button.component.scss
@@ -8,11 +8,23 @@ button {
   height: 25px;
 }
 
+.placeholder {
+  height: 25px;
+  width: 100%;
+  opacity: 1;
+  color: transparent;
+  border: none;
+}
+
 @media screen and (max-width: 768px) {
   button {
     background-color: rgb(239, 236, 236);
     border: 1px solid lightblue;
     color: var(--accent-color);
+    height: 35px;
+  }
+
+  .placeholder {
     height: 35px;
   }
 }
