Remove boilerplate in trainingDataService and add sole exercise field

--- a/client/src/app/features/training-plans/training-view/training-view-navigation/training-view-navigation.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view-navigation/training-view-navigation.component.html
@@ -1,6 +1,6 @@
 <app-pagination
   [currentPage]="trainingDayIndex()"
-  [totalPages]="trainingDataService.trainingFrequency"
+  [totalPages]="trainingDataService.trainingFrequency()"
   (pageChanged)="navigationService.navigateToDay(trainingWeekIndex(), $event)"
 />
 
