--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -25,7 +25,7 @@
       <tbody>
         @for (k of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; track k; let i = $index) {
           @let exercise =
-            trainingDataService.trainingDay()!.exercises[i] ?? {
+            trainingDataService.exercises()[i] ?? {
               category: '',
               exercise: '',
               sets: '',
@@ -76,14 +76,14 @@
               />
             </td>
             <td class="weight-data-cell" data-cell="Weight">
-              @let weightRecommandation = trainingDataService.weightRecommendations[i];
+              @let weightRecommandation = trainingDataService.weightRecommendations()[i];
               <input
                 [id]="exercise._id ?? ''"
                 weightInput
                 type="tel"
                 class="transparent-input weight"
                 [name]="namePrefix + 'weight'"
-                [placeholder]="trainingDataService.weightRecommendations[i] ?? ''"
+                [placeholder]="trainingDataService.weightRecommendations()[i] ?? ''"
                 [(value)]="exercise.weight"
               />
             </td>
