--- a/client/src/app/shared/components/form-input/form-input.component.scss
+++ b/client/src/app/shared/components/form-input/form-input.component.scss
@@ -30,16 +30,14 @@
     font-size: 0.9em;
     color: #9e9e9e;
     pointer-events: none;
-    transition:
-      transform 0.2s,
-      color 0.2s,
-      font-size 0.2s;
+    user-select: none;
     background: white;
     padding: 0 7.5px;
     transform: translate(7px, 10px);
     transition:
       transform 0.2s ease,
-      color 0.2s linear;
+      color 0.2s linear,
+      font-size 0.2s linear;
 
     &.active {
       color: var(--accent-color);
