Remove unsuse logic + update dto and fix volume aggregation

--- a/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.scss
+++ b/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.scss
@@ -38,7 +38,7 @@
   .exercise-field {
     display: grid;
     grid-template-columns: 17ch auto;
-    padding: 1rem 0.75rem;
+    padding: 0.8rem;
     border: none;
 
     &:last-child {
