Add entry for volume calculator

--- a/client/src/app/shared/components/charts/grouped-bar-chart/grouped-bar-chart.component.html
+++ b/client/src/app/shared/components/charts/grouped-bar-chart/grouped-bar-chart.component.html
@@ -1,8 +1,10 @@
 <canvas #canvas id="{{ chartId() }}"></canvas>
 
-<app-circular-icon-button
-  (click)="downloadChart()"
-  [appTooltip]="'Herunterladen'"
-  [icon]="IconName.DOWNLOAD"
-  [iconSize]="18"
-/>
+@if (chartDownloadable()) {
+  <app-circular-icon-button
+    (click)="downloadChart()"
+    [appTooltip]="'Herunterladen'"
+    [icon]="IconName.DOWNLOAD"
+    [iconSize]="18"
+  />
+}
