--- a/client/src/app/features/training-view-2/training-view-2.component.html
+++ b/client/src/app/features/training-view-2/training-view-2.component.html
@@ -1,5 +1,8 @@
 @if (viewInitialized()) {
-  <div class="training-grid">
+  <div class="training-grid" appSwipe [swipeLeft]="navigateToNextDay"
+       [swipeRight]="navigateToPreviousDay"
+       [swipeDiagonalTopLeftToBottomRight]="navigateToPreviousWeek"
+       [swipeDiagonalTopRightToBottomLeft]="navigateToNextWeek">
     <div class="column-name">Category</div>
     <div class="column-name">Exercise</div>
     <div class="column-name">Sets</div>
