--- a/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.html
+++ b/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.html
@@ -36,6 +36,7 @@
 </div>
 <div class="exercise-field" data-label="Weight">
   <app-weight-input
+    [placeholder]="weightPlaceholder()"
     [(weight)]="exercise().weight"
     [numberOfSets]="exercise().sets"
     (weightChanged)="onWeightChanged($event)"
