Allow backoff calculation

--- a/client/src/app/features/training-view-2/inputs/weight/weight-input.component.html
+++ b/client/src/app/features/training-view-2/inputs/weight/weight-input.component.html
@@ -1,2 +1,2 @@
-<input #weightInput type="tel" class="transparent-input" [value]="weight() || ''" [placeholder]="placeholder()"
+<input #weightInput type="tel" class="transparent-input" [value]="weight() || ''" [placeholder]="weightRecommendation()"
        (change)="onWeightChanged($event)" />
