Fix user best performance is not working

--- a/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.html
+++ b/client/src/app/features/training-view-2/training-view-table-row/training-view-table-row.component.html
@@ -54,7 +54,7 @@
 </div>
 <div class="exercise-field" data-label="@RPE">
   <app-rpe-input
-    [(rpe)]="exercise().actualRPE"
+    [rpe]="exercise().actualRPE"
     [numberOfSets]="exercise().sets"
     (rpeChanged)="onActualRpeChange($event)"
   />
