--- a/client/src/app/shared/components/bottom-sheet/bottom-sheet.component.css
+++ b/client/src/app/shared/components/bottom-sheet/bottom-sheet.component.css
@@ -1,34 +1,15 @@
-.bottom-sheet-container {
+:host {
   position: fixed;
-  bottom: -100%;
+  bottom: 0;
   left: 0;
   width: 100%;
-  max-height: 90vh;
+  max-height: 45vh;
   background: white;
   box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 8px 8px 0 0;
-  transition: bottom 0.3s ease-in-out;
   z-index: 2000;
   display: flex;
   flex-direction: column;
-}
-
-.bottom-sheet-container.open {
-  bottom: 0;
-}
-
-.bottom-sheet-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
-  border-bottom: 1px solid #ddd;
-  background-color: #f5f5f5;
-}
-
-.bottom-sheet-content {
-  padding: 1rem;
-  overflow-y: auto;
 }
 
 /*# sourceMappingURL=bottom-sheet.component.css.map */
