--- a/client/src/app/shared/components/bottom-sheet/bottom-sheet.component.html
+++ b/client/src/app/shared/components/bottom-sheet/bottom-sheet.component.html
@@ -1,6 +1,1 @@
-<div class="bottom-sheet-container" [class.open]="isVisible()">
-  <div class="bottom-sheet-content">
-    adsasddassda
-    <ng-template #bottomSheetComponent></ng-template>
-  </div>
-</div>
+<ng-template #content></ng-template>
