Add select for activity grid with reactive two way binding

--- a/client/src/app/features/profile-2/profile.component.html
+++ b/client/src/app/features/profile-2/profile.component.html
@@ -9,7 +9,7 @@
 
       <input type="file" id="file-input" (change)="showProfilePictureChangeDialog($event)" />
 
-      <app-activity-calendar [activityData]="activityCalendarData" />
+      <app-activity-calendar [activityData]="activityCalendarData" [(selectedYear)]="selectedYear" />
 
       <div class="list-item-container">
         @for (item of listItems; track item) {
