--- a/client/src/app/features/profile-2/activity-calendar/activity-calendar.component.css
+++ b/client/src/app/features/profile-2/activity-calendar/activity-calendar.component.css
@@ -1,3 +1,7 @@
+::ng-deep app-dropdown .transparent-input {
+  color: dimgrey !important;
+}
+
 .calendar-container {
   padding: 1rem;
   border-radius: 10px;
@@ -8,6 +12,7 @@
   display: flex;
   flex-direction: column;
   overflow-x: auto;
+  padding-bottom: 0.5em;
   scrollbar-width: thin;
   scrollbar-color: rgb(199, 199, 199) #e9ecef;
 }
@@ -84,7 +89,7 @@
 }
 .calendar-container .calendar-footer .legend {
   display: flex;
-  gap: 6px;
+  gap: 7px;
   font-size: 12px;
   color: #6c757d;
   align-items: center;
