--- a/client/src/app/features/profile-2/activity-calendar/activity-calendar.component.html
+++ b/client/src/app/features/profile-2/activity-calendar/activity-calendar.component.html
@@ -57,6 +57,11 @@
       <div class="legend-color level-3"></div>
       <div class="legend-color level-4"></div>
       <span>More</span>
+
+      <app-dropdown
+        [options]="yearOptions()"
+        [(selectedValue)]="selectedYear"
+      />
     </div>
   </div>
 </div>
