--- a/client/src/app/features/profile-2/activity-calendar/activity-calendar.component.scss
+++ b/client/src/app/features/profile-2/activity-calendar/activity-calendar.component.scss
@@ -14,6 +14,10 @@ $legend-color-size: 12px;
   background-color: map-get($level-colors, $level);
 }
 
+::ng-deep app-dropdown .transparent-input {
+  color: dimgrey !important;
+}
+
 .calendar-container {
   padding: 1rem;
   border-radius: 10px;
@@ -24,6 +28,7 @@ $legend-color-size: 12px;
     display: flex;
     flex-direction: column;
     overflow-x: auto;
+    padding-bottom: 0.5em;
 
     &::-webkit-scrollbar {
       height: 8px;
@@ -106,7 +111,7 @@ $legend-color-size: 12px;
 
     .legend {
       display: flex;
-      gap: 6px;
+      gap: 7px;
       font-size: 12px;
       color: #6c757d;
       align-items: center;
