--- a/client/src/app/shared/components/form-input/form-input.component.css
+++ b/client/src/app/shared/components/form-input/form-input.component.css
@@ -47,9 +47,12 @@
 
 app-icon {
   position: absolute;
-  bottom: 0.9rem;
+  top: 2.3rem;
   right: 1rem;
   color: var(--accent-color);
+}
+app-icon.invalid {
+  color: var(--error-color);
 }
 
 /*# sourceMappingURL=form-input.component.css.map */
