--- a/client/src/app/shared/components/form-input/form-input.component.html
+++ b/client/src/app/shared/components/form-input/form-input.component.html
@@ -22,6 +22,6 @@
   @if (icon() === IconName.CHECK_CIRCLE) {
     <app-icon [name]="icon()!" (click)="emitIconClicked()" [size]="20" [color]="'#27ae60'" />
   } @else {
-    <app-icon [name]="icon()!" (click)="emitIconClicked()" [size]="20" />
+    <app-icon [name]="icon()!" (click)="emitIconClicked()" [size]="20" [class.invalid]="!isValid()" />
   }
 }
