--- a/client/src/app/shared/components/form-input/form-input.component.scss
+++ b/client/src/app/shared/components/form-input/form-input.component.scss
@@ -11,9 +11,8 @@
     border: 2px solid #ddd;
     color: rgb(66, 66, 66);
     border-radius: 4px;
-    transition:
-      border-color 0.2s,
-      box-shadow 0.2s;
+    transition: border-color 0.2s,
+    box-shadow 0.2s;
 
     &:focus {
       border-color: var(--accent-color);
@@ -34,10 +33,9 @@
     background: white;
     padding: 0 7.5px;
     transform: translate(7px, 10px);
-    transition:
-      transform 0.2s ease,
-      color 0.2s linear,
-      font-size 0.2s linear;
+    transition: transform 0.2s ease,
+    color 0.2s linear,
+    font-size 0.2s linear;
 
     &.active {
       color: var(--accent-color);
@@ -59,7 +57,11 @@
 
 app-icon {
   position: absolute;
-  bottom: 0.9rem;
+  top: 2.3rem;
   right: 1rem;
   color: var(--accent-color);
+
+  &.invalid {
+    color: var(--error-color);
+  }
 }
