--- a/client/src/app/features/body-weight/body-weight.component.css
+++ b/client/src/app/features/body-weight/body-weight.component.css
@@ -1,3 +1,27 @@
+:host {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 0.75rem;
+}
 
+.body-weight-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.body-weight-grid-row {
+  padding: 7.5px 10px;
+  border-bottom: 1px solid var(--calendar-border-color);
+  border-right: 1px solid var(--calendar-border-color);
+}
+.body-weight-grid-row:hover {
+  background-color: var(--calendar-hover-color);
+}
+.body-weight-grid-row:nth-child(2n) {
+  border-right: none;
+}
+.body-weight-grid-row.header {
+  font-weight: 500;
+}
 
 /*# sourceMappingURL=body-weight.component.css.map */
