Add option to add weight that is unique for day

--- a/client/src/app/features/training-view-2/training-view-2.component.html
+++ b/client/src/app/features/training-view-2/training-view-2.component.html
@@ -22,7 +22,8 @@
     }
   </div>
 
-  <app-add-row-button (addRow)="trainingPlanDataService.addExercise()" (removeRow)="removeRow()" />
+  <app-add-row-button (addRow)="trainingPlanDataService.addExercise()" (removeRow)="removeRow()"
+                      [(isVisible)]="isVisible" />
 
   <app-training-view-navigation [trainingWeekIndex]="trainingDayLocatorService.trainingWeekIndex()"
                                 [trainingDayIndex]="trainingDayLocatorService.trainingDayIndex()" />
