--- a/client/src/app/features/body-weight/body-weight.component.html
+++ b/client/src/app/features/body-weight/body-weight.component.html
@@ -1,15 +1,31 @@
-@if (bodyWeights$ | async; as bodyWeights) {
+@if (!isLoading()) {
   <div
-    class="body-weight-grid"
+    class="body-weight-grid-container"
   >
-    <div class="body-weight-grid-row header">Körpergewicht</div>
-    <div class="body-weight-grid-row header">Datum</div>
+    <div
+      class="body-weight-grid"
+    >
+      <div class="body-weight-grid-row header">Datum</div>
+      <div class="body-weight-grid-row header">Körpergewicht</div>
 
-    @for (bodyWeightData of bodyWeights; track bodyWeightData) {
-      <div class="body-weight-grid-row">{{ bodyWeightData.weight }} kg</div>
-      <div class="body-weight-grid-row">{{ bodyWeightData.date | date: 'dd.MM.yyyy' }}</div>
-    }
+      @for (bodyWeightData of bodyWeights(); track bodyWeightData) {
+        <div class="body-weight-grid-row">{{ bodyWeightData.date | date: 'dd.MM.yyyy' }}</div>
+
+
+        <div class="body-weight-grid-row">
+          <app-input
+            [value]="bodyWeightData.weight"
+            [type]="'number'"
+            [alignText]="'left'"
+          />
+        </div>
+      }
+    </div>
+    <app-add-row-button (addRow)="addRow()" [(isVisible)]="isVisible" />
   </div>
+
+
+  <app-grouped-bar-chart [data]="bodyWeightBarChartData()!" yAxisTitle="Körpergewicht (Verlauf)" />
 } @else {
   <app-spinner />
 }
