Add posibility to add weight and persist data

--- a/client/src/app/features/body-weight/body-weight.component.css
+++ b/client/src/app/features/body-weight/body-weight.component.css
@@ -24,4 +24,8 @@
   font-weight: 500;
 }
 
+.transparent-input {
+  text-align: left !important;
+}
+
 /*# sourceMappingURL=body-weight.component.css.map */
