Add goal selection for bodyweight

--- a/client/src/app/features/body-weight/body-weight.component.html
+++ b/client/src/app/features/body-weight/body-weight.component.html
@@ -2,6 +2,14 @@
   <div
     class="body-weight-grid-container"
   >
+
+    <div class="body-weight-goal-selection">
+      <app-floating-label-input [label]="'Ziel'" [options]="bodyWeightGoalOptions()  | toDropdownOptionsFromStrings"
+                                [(value)]="bodyWeightGoal" [type]="'select'" />
+      <app-floating-label-input [label]="'Rate'" [options]="bodyWeightRates() | toDropdownOptionsFromStrings"
+                                [(value)]="bodyWeightRate" [type]="'select'" />
+    </div>
+
     <div
       class="body-weight-grid"
     >
@@ -23,7 +31,7 @@
         </div>
       }
     </div>
-    <app-add-row-button (addRow)="addRow()" [(isVisible)]="isVisible" />
+    <app-add-row-button (addRow)="addRow()" [isVisible]="true" />
   </div>
 
 
