Make body weight section more appealing on moble and delete unused code

--- a/client/src/app/features/best-performance/best-performance.component.html
+++ b/client/src/app/features/best-performance/best-performance.component.html
@@ -2,17 +2,19 @@
   @if (squatPerformance() && squatPerformanceDashboardCardInfo()) {
     <app-dashboard-card
       [title]="squatPerformanceDashboardCardInfo()!.title"
-      [icon]="IconName.BAR_CHART"
       [unit]="squatPerformanceDashboardCardInfo()!.unit"
       [differenceFromLastSession]="squatPerformanceDashboardCardInfo()!.prIncrement"
     />
   }
 
-  @if (benchPerformance() && benchPerformanceDashboardCardInfo()) {}
+  @if (benchPerformance() && benchPerformanceDashboardCardInfo()) {
+  }
 
-  @if (deadliftPerformance() && deadliftPerformanceDashboardCardInfo()) {}
+  @if (deadliftPerformance() && deadliftPerformanceDashboardCardInfo()) {
+  }
 
-  @if (overheadpressPerformance() && overheadpressPerformanceDashboardCardInfo()) {}
+  @if (overheadpressPerformance() && overheadpressPerformanceDashboardCardInfo()) {
+  }
 } @else {
   <app-chart-skeleton />
 }
