--- a/client/src/app/features/training-logs/training-log-popup/training-log-popup.component.css
+++ b/client/src/app/features/training-logs/training-log-popup/training-log-popup.component.css
@@ -17,4 +17,10 @@
   padding-left: 1rem;
 }
 
+.body-weight-statistics-section {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 /*# sourceMappingURL=training-log-popup.component.css.map */
