--- a/client/src/app/features/training-logs/training-log-popup/training-log-popup.component.scss
+++ b/client/src/app/features/training-logs/training-log-popup/training-log-popup.component.scss
@@ -17,3 +17,9 @@
 .record-section {
   padding-left: 1rem;
 }
+
+.body-weight-statistics-section {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
