--- a/client/src/app/features/training-view-2/add-row-button/add-row-button.component.scss
+++ b/client/src/app/features/training-view-2/add-row-button/add-row-button.component.scss
@@ -19,8 +19,7 @@ button {
 @media screen and (max-width: 768px) {
   button {
     background-color: rgb(239, 236, 236);
-    border: 1px solid lightblue;
-    color: var(--accent-color);
+    color: var(--accent-color) !important;
     height: 35px;
   }
 
