Finish basic visualization for best performances

--- a/client/src/app/features/best-performance/best-performance.component.css
+++ b/client/src/app/features/best-performance/best-performance.component.css
@@ -21,5 +21,6 @@ app-grouped-bar-chart {
     flex-direction: column;
     gap: 10px;
   }
-
 }
+
+/*# sourceMappingURL=best-performance.component.css.map */
