--- a/client/src/app/features/best-performance/best-performance.component.html
+++ b/client/src/app/features/best-performance/best-performance.component.html
@@ -1,59 +1,24 @@
 @if (isInitialized()) {
+  @if (squatPerformance()) {
+    <app-best-performance-category-section [categoryPerformanceData]="squatPerformance()!" />
 
-  <section>
-    @if (squatPerformance()) {
-      <app-dashboard-card
-        [title]="squatPerformanceDashboardCardInfo()!.title"
-        [unit]="squatPerformanceDashboardCardInfo()!.unit"
-        [differenceFromLastSession]="squatPerformanceDashboardCardInfo()!.prIncrement"
-      />
+  }
 
-      <app-grouped-bar-chart [data]="squatChartData()!" />
-    }
-  </section>
-
-  <section>
-    @if (benchPerformance()) {
-      <app-dashboard-card
-        [title]="benchPerformanceDashboardCardInfo()!.title"
-        [unit]="benchPerformanceDashboardCardInfo()!.unit"
-        [differenceFromLastSession]="benchPerformanceDashboardCardInfo()!.prIncrement"
-      />
-    }
-
-    <app-grouped-bar-chart [data]="benchChartData()!" />
-  </section>
+  @if (benchPerformance()) {
+    <app-best-performance-category-section [categoryPerformanceData]="benchPerformance()!" />
+  }
 
 
-  <section>
-    @if (deadliftPerformance()) {
-      <app-dashboard-card
-        [title]="deadliftPerformanceDashboardCardInfo()!.title"
-        [unit]="deadliftPerformanceDashboardCardInfo()!.unit"
-        [differenceFromLastSession]="deadliftPerformanceDashboardCardInfo()!.prIncrement"
-      />
+  @if (deadliftPerformance()) {
+    <app-best-performance-category-section [categoryPerformanceData]="deadliftPerformance()!" />
+  }
 
-      <app-grouped-bar-chart [data]="deadliftChartData()!" />
-    }
 
-  </section>
-
-  <section>
-    @if (overheadpressPerformance()) {
-      <app-dashboard-card
-        [title]="overheadpressPerformanceDashboardCardInfo()!.title"
-        [unit]="overheadpressPerformanceDashboardCardInfo()!.unit"
-        [differenceFromLastSession]="overheadpressPerformanceDashboardCardInfo()!.prIncrement"
-      />
-    }
-
-    @if (overheadpressChartData()) {
-      <app-grouped-bar-chart [data]="overheadpressChartData()!" />
-
-    }
-
-  </section>
+  @if (overheadpressPerformance()) {
+    <app-best-performance-category-section [categoryPerformanceData]="overheadpressPerformance()!" />
+  }
 
 } @else {
-  <app-chart-skeleton />
+  <app-spinner />
 }
+
