--- a/client/src/app/features/best-performance/best-performance-category-section/best-performance-category-section.component.html
+++ b/client/src/app/features/best-performance/best-performance-category-section/best-performance-category-section.component.html
@@ -5,3 +5,11 @@
 />
 
 <app-grouped-bar-chart [data]="categoryChartData()!" />
+
+
+<div [@toggleCollapse]="hovered() ? 'expanded' : 'collapsed'" class="toggle-button-container">
+  <app-button [variant]="'SECONDARY'" [textContent]="'Letzten Eintrag löschen'" [icon]="IconName.Trash"
+              (clicked)="showDeleteMostRecentEntryModal()" />
+</div>
+
+
