--- a/client/src/app/shared/components/button/button.component.html
+++ b/client/src/app/shared/components/button/button.component.html
@@ -7,6 +7,9 @@
     'btn-destructive': variant() === 'DESTRUCTIVE',
   }"
 >
+  @if (icon()) {
+    <app-icon [name]="icon()!" />
+  }
   {{ textContent() }}
 
   @if (isLoading()) {
