--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -137,7 +137,6 @@
       <circle cx="16" cy="11" r="1"></circle>
       <circle cx="16" cy="16" r="1"></circle>
     }
-
     @case (IconName.USERS) {
       <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
       <circle cx="9" cy="7" r="4"></circle>
@@ -303,6 +302,10 @@
       <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
       <rect x="7" y="7" width="3" height="9"></rect>
       <rect x="14" y="7" width="3" height="5"></rect>
+    }
+    @case (IconName.REWIND) {
+      <polygon points="11 19 2 12 11 5 11 19"></polygon>
+      <polygon points="22 19 13 12 22 5 22 19"></polygon>
     }
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
